Fixed spacing between TeamVisualizerComponents in homepage

--- a/src/styles/HomePageStyle.css
+++ b/src/styles/HomePageStyle.css
@@ -133,7 +133,7 @@
 .TeamListEntityRole {
 	font-family: duck;
 	font-size: 0.7em;
-	max-width:20ch;
+	max-width:15ch;
 	max-height:900px;
 }
 
